Create Work Entry Api
