# config/packages/nelmio_api_doc.yaml
@@ -59,6 +59,10 @@ nelmio_api_doc:
                     required:
                         - name
                         - email
+                CreateWorkEntryDto:
+                    required:
+                        - userId
+                        - startDate
                 BadRequestExceptionResponse:
                     type: object
                     properties:
@@ -98,3 +102,6 @@ nelmio_api_doc:
             - { alias: UpdateUserDto, type: App\Dto\User\UpdateUserDto }
             - { alias: GetUserResponse, type: App\Response\User\GetUserResponse }
             - { alias: GetUsersCollectionResponse, type: App\Response\User\GetUsersCollectionResponse }
+            #WorkEntry
+            - { alias: CreateWorkEntryDto, type: App\Dto\WorkEntry\CreateWorkEntryDto }
+            - { alias: GetWorkEntryResponse, type: App\Response\WorkEntry\GetWorkEntryResponse }
